--- a/.env
+++ b/.env
@@ -3,3 +3,12 @@ NOMBRE_JUEGO=PING PONG
 ANCHO=1200
 ALTO=700
 FPS=60
+
+# variales de juego
+MAXIMOPUNTAJE=1
+
+JUGADOR1NOMBRE=DRAGÓN DE HIELO
+JUGADOR2NOMBRE=FÉNIX DE FUEGO
+
+VELOCIDADPELOTA=6
+VELOCIDADRAQUETAS=7
